@@ -305,4 +305,10 @@ Up to 2009-01-02 (since 1.7.5 release) Denton Woods <doomwiz@users.sf.net>
 	  updated to the new width at this point.
 	* il_rotate.c (iluRotate_): Rewrote to fix 1 pixel shifting issue.
 	* Updated DevIL Manual with new ilSaveL information.
+	* il_stack.c (ilCloseImage): Added missing delete of Faces member.
+	* il_dds-save.c (ilCompressDXT): Added this function.
+	* il.h: Removed ilNVidiaCompressDXT and ilSquishCompressDXT - moved to il_internal.h.
+	* il_dds-save.c:151: Changed to Faces from Images.
+	* il_dds-save.c (CompressTo565): Added IL_ALPHA case.
+	* Updated DevIL Manual with new DXTC information.
 	
